reference/rfid.sdk.win.V02.09/rfid_library_security_gate/samples/mfc/c++_lib/inc/rfidlib_AIP_ISO15693.h

DWORD RFIDLIB_API ISO15693_GetLibVersion(LPTSTR buf ,DWORD nSize /* in character */)  ;
/*
*	iso15693 inventory parameters
*/
// inventory need to match the AFI value 
RFID_DN_HANDLE RFIDLIB_API ISO15693_CreateInvenParam(RFID_DN_HANDLE hInvenParamSpecList,
															BYTE AntennaID/* By default set to 0,apply to all antenna */,
															BOOLEAN en_afi,
															BYTE afi,
															BYTE slot_type/*0:default,1: 1slot,16:16 slot */)   ;
/*
* Parse iso15693 tag data 
*/
err_t RFIDLIB_API ISO15693_ParseTagDataReport(RFID_DN_HANDLE hTagReport,
										  DWORD *aip_id,
										  DWORD *tag_id,
										  DWORD* ant_id,
										  BYTE *dsfid,
										  BYTE uid[])  ;
err_t RFIDLIB_API ISO15693_Connect(RFID_READER_HANDLE hr ,
								   DWORD tagType,
							BYTE address_mode,/* in param */ 
							BYTE uid[] ,
							RFID_TAG_HANDLE *ht
							) ;
err_t RFIDLIB_API ISO15693_ReadSingleBlock(
									RFID_READER_HANDLE hr ,
									RFID_TAG_HANDLE ht, /* Tag handle connected */
									BOOLEAN readSecSta,/* IN: Whether read security status */
								  DWORD blkAddr,/* IN: Block number  */
						BYTE bufBlockDat[], /* OUT: buffer for storing single block data or single block data +sec sta*/
						DWORD nSize /* in:size of the buffer*/,
						DWORD *bytesBlkDatRead)  ;
err_t RFIDLIB_API ISO15693_WriteSingleBlock(
									RFID_READER_HANDLE hr ,
									RFID_TAG_HANDLE ht, /* Tag handle connected */
								   DWORD blkAddr,/* Block number  */
								BYTE newBlkData[] ,
								DWORD bytesToWrite)  ;
err_t RFIDLIB_API ISO15693_ReadMultiBlocks( RFID_READER_HANDLE hr ,
									RFID_TAG_HANDLE ht, /* Tag handle connected */
									BOOLEAN readSecSta ,
									 DWORD blkAddr,/* Block number  */
							DWORD numOfBlksToRead, /* in:Number of blocks to read  */
							DWORD *numOfBlksRead,/* ,out: blocks read */
							BYTE bufBlocks[],/*  buffer for storing block data ,4 * num_of_blks */
							DWORD nSize, /* in:size of the buffer */
							DWORD *bytesBlkDatRead)  ;
err_t RFIDLIB_API ISO15693_WriteMultipleBlocks(RFID_READER_HANDLE hr ,
									RFID_TAG_HANDLE ht, /* Tag handle connected */
									 DWORD blkAddr,
							DWORD numOfBlks, 
							BYTE newBlksData[],
							DWORD bytesToWrite) ;
err_t RFIDLIB_API ISO15693_WriteAFI(RFID_READER_HANDLE hr ,
									RFID_TAG_HANDLE ht, /* Tag handle connected */
								BYTE afi) ;
err_t RFIDLIB_API ISO15693_LockAFI(RFID_READER_HANDLE hr ,
									RFID_TAG_HANDLE ht /* Tag handle connected */) ;
err_t RFIDLIB_API ISO15693_WriteDSFID(RFID_READER_HANDLE hr ,
									RFID_TAG_HANDLE ht, 
									BYTE dsfid)  ;
err_t RFIDLIB_API ISO15693_LockDSFID(RFID_READER_HANDLE hr ,
									RFID_TAG_HANDLE ht)  ;
err_t RFIDLIB_API ISO15693_GetSystemInfo(RFID_READER_HANDLE hr ,
									RFID_TAG_HANDLE ht,
									BYTE uid[],	/* out: tag uid */
											BYTE *dsfid, /* out:DSFID */
											BYTE *afi,  /* out:AFI */
											DWORD *blkSize ,/* out: block size */
											DWORD *numOfBloks, /* out:number of total blocks */
											BYTE *icRef /* out:ic reference */) ;
err_t RFIDLIB_API ISO15693_GetBlockSecStatus(RFID_READER_HANDLE hr ,
									RFID_TAG_HANDLE ht,
										DWORD blkAddr, 
										DWORD numOfBlks,
										BYTE bufBlkSecs[],
										DWORD nSize/* in: size of the buffer */,
										DWORD *bytesSecRead /*out:number of block status byte copied*/ ) ;
err_t RFIDLIB_API ISO15693_LockMultipleBlocks(RFID_READER_HANDLE hr ,
									RFID_TAG_HANDLE ht, /* Tag handle connected */
									 DWORD blkAddr,
							DWORD numOfBlks) ;
err_t RFIDLIB_API NXPICODESLI_EableEAS(RFID_READER_HANDLE hr ,
									   RFID_TAG_HANDLE ht)  ;
err_t RFIDLIB_API NXPICODESLI_DisableEAS(RFID_READER_HANDLE hr ,
										 RFID_TAG_HANDLE ht) ;
err_t RFIDLIB_API NXPICODESLI_LockEAS(RFID_READER_HANDLE hr ,
									  RFID_TAG_HANDLE ht) ;
err_t RFIDLIB_API NXPICODESLI_EASCheck(RFID_READER_HANDLE hr ,
									   RFID_TAG_HANDLE ht,
									   BYTE *EASFlag) ;
err_t RFIDLIB_API NXPICODESLI_EASCheck(RFID_READER_HANDLE hr ,
										RFID_TAG_HANDLE ht,
										BYTE *EASFlag) ;